# FlexAniDBSuite

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
fadbs/: __init__.py  anidb.py  fadbs_est_release.py  fadbs_lookup.py  fadbs_series.py  fadbs_series_nfo.py  fadbs_wishlist.py
fadbs/templates/tasks/: tvshow.template.nfo
fadbs/tests/: 13217.xml  parsing.py
fadbs/util/: __init__.py  anidb.py  anidb_cache.py  anidb_parse.py  anidb_parse_episodes.py  anidb_parse_x.py  anidb_parser_new.py  anidb_parser_tags.py  anidb_parsing_interface.py  anidb_search.py  anidb_structs.py  api_anidb.py  config.py  crazydict.py  fadbs_session.py  path.py  stucture_utils.py  utils.py
templates/task/: episode.nfo.template  tvshow.nfo.template
